# stallion-prototype-0

./: .CMakeLists.txt.swp  .gdbinit  .gitignore  CMakeLists.txt  README.md  bochsrc.example  configure  debug.rc.example  log.txt  makefile
Platform/: Generic-i686.cmake
cmake/: i686_elf_gcc.cmake
include/: process.h  stallion.h
include/stallion/: stallion.h  syscall.h
initrd/: makefile
iso_contents/boot/grub/: grub.cfg
iso_contents/boot/include/stallion/: stallion.h  syscall.h
kernel/: .gitignore  CMakeLists.txt  bochsrc.txt.example  configure  makefile
kernel/Platform/: Generic-i686.cmake
kernel/core_modules/: makefile  sanity_check.c  sanity_check.s
kernel/include/stallion/: syscall.h
kernel/iso_contents/boot/grub/: grub.cfg
kernel/libc/: makefile  string.c  syscall.s
kernel/libc/include/: assert.h  defs.h  stdbool.h  stddef.h  stdint.h  string.h
kernel/libc/include/stallion/: stallion.h
kernel/newlib-copy/newlib/libc/sys/: configure.in
kernel/src/: blob.c  elf.c  init.c  kernel.c  liballoc.c  linker.ld  makefile  scheduler.c  syscall_impl.c  util.c
kernel/src/i686/: boot.s  gdt.c  interrupt.c  kernel.c  kmalloc.c  serial_print.c
kernel/src/i686-elf/: boot.s  early_init.c  gdt-asm.s  gdt.c  idt-asm.s  idt.c  interrupt.c  makefile  paging-asm.s  paging.c  ring3-asm.s  ring3.c  serial_print.c  stallion_i686_elf.h
kernel/src/i686-elf/include/: stallion_i686_elf.h
kernel/src/include/: blob.h  fd.h  file.h  interrupt.h  liballoc.h  process.h  stallion.h  stallion_elf.h  stallion_process.h
src/: CMakeLists.txt  grub.cfg  linker.ld  makefile
src/arch/: CMakeLists.txt
src/arch/x86/: CMakeLists.txt  a20.asm  boot.asm  create_page_directory.c  gdt.asm  makefile  nmi.asm  paging.asm
src/i686/: CMakeLists.txt  boot.s  kernel.c  serial_print.c
src/include/: stallion.h
src/kernel/: CMakeLists.txt  kernel_main.c  makefile
toolchain/: .cquery  CMakeLists.txt  configure  makefile  syscalls.c
toolchain/binutils-2.32/: config.sub
toolchain/binutils-2.32/bfd/: config.bfd
toolchain/binutils-2.32/gas/: configure.tgt
toolchain/binutils-2.32/ld/: Makefile.am  Makefile.in  aclocal.m4  configure.tgt
toolchain/binutils-2.32/ld/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
toolchain/druid/: druid.h
toolchain/local/lib/: charset.alias  libasprintf.0.0.0.dylib  libasprintf.la  libgettextlib-0.14.5.dylib  libgettextlib.dylib  libgettextlib.la  libgettextpo.0.1.0.dylib  libgettextpo.0.dylib  libgettextpo.la  libgettextsrc-0.14.5.dylib  libgettextsrc.dylib  libgettextsrc.la  libintl.3.4.3.dylib  libintl.la  libltdl.7.dylib  libltdl.la
toolchain/local/lib/gettext/: hostname  urlget  user-email
toolchain/local/share/autoconf/: autom4te.cfg
toolchain/local/share/autoconf/autoconf/: autoconf.m4f
toolchain/local/share/autoconf/autotest/: autotest.m4f
toolchain/local/share/autoconf/m4sugar/: m4sh.m4f  m4sugar.m4f
toolchain/local/share/automake-1.11/Automake/: Config.pm
toolchain/local/share/doc/gettext/: gettext.1.html  ngettext.1.html
toolchain/local/share/doc/gettext/examples/: installpaths
toolchain/local/share/emacs/site-lisp/: autoconf-mode.elc  autotest-mode.elc  po-compat.elc  po-mode.elc  start-po.elc
toolchain/local/share/info/: dir
toolchain/local/share/man/man1/: gettext.1  ngettext.1
toolchain/newlib/: config.sub
toolchain/newlib-copy/: config.sub
toolchain/newlib-copy/newlib/: configure.host
toolchain/newlib-copy/newlib/libc/sys/stallion/: Makefile.am  syscall_glue.S  syscalls.c
toolchain/newlib-copy/newlib/libc/sys/stallion/include/stallion/: stallion.h
toolchain/newlib/newlib/: configure.host
toolchain/newlib/newlib/libc/include/: strings.h
toolchain/newlib/newlib/libc/sys/: configure  configure.in
toolchain/newlib/newlib/libc/sys/autom4te.cache/: output.0  requests  traces.0
toolchain/newlib/newlib/libc/sys/stallion/: aclocal.m4  configure  crt0.c  syscalls.c
toolchain/newlib/newlib/libc/sys/stallion/autom4te.cache/: output.0  requests  traces.0  traces.1
toolchain/stld/: .cquery  CMakeLists.txt  README.md  elf.h  main.c  options.c  stld.h
toolchain/sysroot/i686-stallion/include/: strings.h
toolchains/: clang_i686_pc_none_elf.cmake  i686_elf_gcc.cmake
